# batt_log

./: .gitignore  Cargo.toml  README.md  install.sh  start_site.sh  uninstall.sh
backend/: go.mod  go.sum  handlers.go  lib.go  main.go
common/: Cargo.toml
common/src/: config.rs
contrib/openrc/: batt_log
contrib/runit/: run
contrib/systemd/: batt_log.service
daemon/: Cargo.toml
daemon/src/: database.rs  lib.rs  main.rs  utils.rs
etc/: config.toml
frontend/: package.json
service/: Cargo.toml  install.sh  uninstall.sh
service/services/openrc/: batt_log
service/services/runit/: run
service/services/systemd/: batt_log.service
service/src/: database.rs  lib.rs  main.rs
src/: config.rs  database.rs  lib.rs  main.rs
tui/: Cargo.toml
tui/src/: app.rs  lib.rs  main.rs  modules.rs  terminal.rs
website/backend/: config.go  go.mod  go.sum  lib.go  main.go  middleware.go
website/frontend/: package-lock.json
website/frontend/src/: App.css  App.js
website/frontend/src/components/SessionChart/: SessionChart.js
website/frontend/src/components/Sidebar/: CapacityWithDelta.js  Element.js  Sidebar.js
website/frontend/src/styles/: Sidebar.css
