[package]
name = "batt_log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battery = "0.7.8"
home = "0.5.9"
rusqlite = "0.31.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
toml = "0.8.12"

[lib]
name = "common"
path = "common/src/config.rs"

[[bin]]
name = "batt_log-daemon"
path = "daemon/src/main.rs"

[[bin]]
name = "batt_log-tui"
path = "tui/src/main.rs"
