[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "batt_log-daemon"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
battery = "0.7.8"
common = { path = "../common" }
rusqlite = "0.31.0"
