[package]
name = "tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "batt_log-tui"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
common = { path = "../common" }
crossterm = "0.27.0"
ratatui = "0.26.1"
rusqlite = "0.31.0"
